class Event {
  constructor(uuid) {
    this.uuid = uuid;
  }
}

module.exports = Event;
