@startuml events

title "Events"

class Event {
    Uuid uuid
}

class TabOpened {
    + Int tableNumber
    + String waiter
}

class DrinksServed {
    + Int[] menuNumbers
}

class DrinksOrdered {
    + OrderedItem[] items
}

class FoodOrdered {
    + OrderedItem[] items
}

class TabClosed {
    + Float amountPaid
    + Float orderValue
    + Float tipValue
}

Event <|-- TabOpened
Event <|-- DrinksOrdered
Event <|-- FoodOrdered
Event <|-- DrinksServed
Event <|-- TabClosed

class OrderedItem {
    + int MenuNumber
    + string Description
    + bool IsDrink
    + decimal Price
}

DrinksOrdered *-- OrderedItem
FoodOrdered *-- OrderedItem

@enduml
